# ParallelSimulations

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: Main.cpp
